# notei

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
docs/: decision-records.md
public/assets/: site.webmanifest
scripts/: check-comments.cjs  gen-icon-ico.cjs  gen-icons.js
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-exit-app.toml
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  AppShell.tsx  ArchiveView.tsx  CalendarEventModal.tsx  CalendarView.tsx  CommandPalette.tsx  EditorPane.tsx  ExportZipModal.tsx  IntroSplash.tsx  ListPane.tsx  ReminderDetailsModal.tsx  RemindersView.tsx  ResizeHandles.tsx  SettingsView.tsx  Sidebar.tsx  TemplatesView.tsx  Titlebar.tsx  useNavigate.ts  useStartupSync.ts
src/components/: ExportCard.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Checkbox.tsx  DatePicker.tsx  DateTimePicker.tsx  Dialog.tsx  Dropdown.tsx  Input.tsx  SegmentedControl.tsx  Select.tsx  TimeField.tsx  Tooltip.tsx
src/features/attachments/: attachmentService.ts
src/features/calendar/: ics.test.ts  ics.ts  layout.ts  migrateCalendar.test.ts  migrateCalendar.ts  repository.ts  types.ts
src/features/export/: exportNote.ts  noteToMarkdown.ts
src/features/notes/: EditorToolbar.tsx  NoteEditor.tsx  (+5 more)
src/lib/: ignoreError.ts  store.ts
src/strings/: en.ts  t.ts
src/theme/: ThemeProvider.tsx  themeContext.ts
(+11 files in other folders)
